/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.5.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'

    // apply javafx plugin
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

javafx {
    version="26.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}
repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation libs.junit
    

    // This dependency is used by the application.
    implementation libs.guava
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    // toolchain {
    //     languageVersion = JavaLanguageVersion.of(21)
    // }
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

application {
    mainClass = 'reutlingenuniversity.vocabtrainer.App'
}

tasks.named('run') {
    jvmArgs '--enable-native-access=javafx.graphics'
}
